# linuxtag_2023_conan

./: .gitignore  README.md
create/: .tmp
from_source/: conanfile.py
from_source/test_package/: CMakeLists.txt  conanfile.py
from_source/test_package/src/: example.cpp
info/: conanfile.py  info.sh
lib_linuxtag/: CMakeLists.txt  build.sh  linuxtag.cpp  linuxtag.hpp
server/: server.sh
tooling/: conanfile.py  deps.py  deps_proc.py
use/: CMakeLists.txt  build.sh  conanfile.py
use/src/: test.cpp
